[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sardana-nexus"
dynamic = ["version"]
authors = [
    {name = "ALBA CSBL group", email = "ctbeamlines@cells.es"},
]
maintainers = [
  {name = "Oriol Vallcorba", email = "ovallcorba@cells.es"}
]
description = "Sardana Nexus Recorder with Appliaction Definition via YAML"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPLv3"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = ['pydantic']

[project.urls]
Repository = "https://github.com/ALBA-Synchrotron/sardana-nexus"

[tool.setuptools]
packages = ['sardana_nexus']

[tool.setuptools_scm]
write_to = "sardana_nexus/_version.py"
